--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <canvas id="canvas1"></canvas>
+    <img id="beetlemorph" src="./assets/beetlemorph.png" alt="beetlemorph" />
+    <img src="./assets/player.png" alt="player" id="player" />
+    <img src="./assets/player_jets.png" alt="player_jets" id="player_jets" />
+    <img src="./assets/rhinomorph.png" alt="rhinomorph" id="rhinomorph" />
+    <img src="./assets/boss.png" alt="boss" id="boss" />
+    <img src="./assets/eaglemorph.png" alt="eaglemorph" id="eaglemorph" />
+    <img src="./assets/enemyProjectile.png" alt="enemyProjectile" id="enemyProjectile" />
+    <img src="./assets/squidmorph.png" alt="squidmorph" id="squidmorph" />
+    <img src="./assets/boss8.png" alt="boss8" id="boss8" />
+    <img src="./assets/lobstermorph.png" alt="lobstermorph" id="lobstermorph" />
     <script type="module" src="js/main.js"></script>
-</body>
+  </body>
 </html>
